v0.17
 - Added options to the 'add rule' button to add rules with templates for 
   variables and conditionals
 - New Score algorithm
 - Added 'upload score' button
 - Implemented conection with Graylog server
 - Fixed bug #22

v0.16
 - Added "score" stab. Implemented simple algorithm for scoring chatbots.
 - Logging new stats such as history lines, history lexicon size, rule points,
   among others
 - Fixed bug #20

v0.15
 - Logging simple stats: total words, total different words and connection
 - Updated some strings

v0.14
 - Integrated Freeling
 - Removing duplicated characters to improve matching.
 - Test chatbot tab: Moved between "Teach" and "Connect" tabs. Added options
   where user can enable/disable sentence lemmatization and other options.
 - History tab: Added filter and tool buttons to remove conversations, 
   find the definition of a rule with match and teach a new rule from a 
   message without match 
 - Added button to skip account verification
 - Added new log file chatbot.log to log Chatbot issues
 - Removed unused feature "Reminder to save conversation"
 - Added a more descriptive message error when the user provides his/her 
   email to connect to a Facebook

v0.13
 - Tab changes focus of multiline input texts
 - Updated some strings to Spanish Argentina
 - Bugs fixed: #7, #14, #18, #19

v0.12
 - Updated some strings to Spanish Argentina
 - Renamed localization file strings_es.qm to lang/chatbot_es_AR.qm
 - Reminder to save conversation in public_corpus.dat disabled by default
 - Using new configuration file ./chatbot.conf

v0.11
 - Saving two corpora: corpus.dat and public_corpus.dat

v0.10
 - Updated localization of some strings
 - Added botmaster name to the message that ask to save a conversation
 - Fixed bug: #16

v0.09
 - Persisting chat roster.
 - Persisting black list roster in ./data directory. Not using config file anymore
 - By default, when chatbot is connected all contacts are unchecked in the roster