@@ -4,7 +4,8 @@ v0.17
  - New Score algorithm
  - Added 'upload score' button
  - Implemented conection with Graylog server
- - Fixed bug #22
+ - Logging stats for account verification and score in Graylog server
+ - Fixed bug #22, #24
 
 v0.16
  - Added "score" stab. Implemented simple algorithm for scoring chatbots.
